k8s_conf/prometheus/prom.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus
    meta.helm.sh/release-namespace: monitoring
  labels:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: 13.0.1-security-01
    helm.sh/chart: grafana-12.4.1
  name: prometheus-grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  ports:
  - name: http-web
    port: 80
    protocol: TCP
    targetPort: grafana
    nodePort: 32000
  selector:
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: grafana
